// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестирование компонента Circle Отрисовка компонента Circle без символа 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с  пропсом tail 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 string"
      data-cy="tail"
    >
      tail
    </div>
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с index 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    >
      1
    </p>
    <div
      class="text text_type_input text_color_input mt-4 absolute tail60 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с react-элементом в пропсе head 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    >
      <div>
        React Element
      </div>
    </div>
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с react-элементом в пропсе tail 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    >
      <div>
        React Element
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с пропсом head 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head string"
      data-cy="head"
    >
      head
    </div>
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с пропсом isSmall ===  true 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle  small default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с символом 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      >
        Символ
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с состоянием ElementStates.Changing 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   changing"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с состоянием ElementStates.Default 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Тестирование компонента Circle Отрисовка компонента Circle с состоянием ElementStates.Modified 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   modified"
      data-cy="border"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-cy="letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-cy="index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;
